# Copyright (c) 2021-2022 Intel Corporation
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[metadata]
name = omz_tools
description = Model Downloader and other automation tools from Open Model Zoo
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3

[options]
zip_safe = False
packages = find_namespace:
package_dir =
    = src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    omz_converter = openvino.model_zoo.omz_converter:main
    omz_data_downloader = openvino.model_zoo.omz_data_downloader:main
    omz_downloader = openvino.model_zoo.omz_downloader:main
    omz_info_dumper = openvino.model_zoo.omz_info_dumper:main
    omz_quantizer = openvino.model_zoo.omz_quantizer:main
